# grumpy

./: .flake8  NEWS.md  README.md  WISHLIST.md  classIndex.html  grumpy_checks.application.html  grumpy_checks.checks.CheckCollection.html  grumpy_checks.checks.CheckCollectionGroup.html  grumpy_checks.checks.CheckResponse.html  grumpy_checks.checks.CollectionResponse.html  grumpy_checks.checks.html  grumpy_checks.cli.about.AboutCommand.html  grumpy_checks.cli.about.html  grumpy_checks.cli.cat.html  grumpy_checks.cli.html  grumpy_checks.commands.html  grumpy_checks.docs.html  grumpy_checks.everything.html  grumpy_checks.html  grumpy_checks.lint.html  grumpy_checks.news.html  grumpy_checks.tests.html  grumpy_checks.utils.html  index.html  moduleIndex.html  nameIndex.html  objects.inv  pyproject.toml  scripts.py  undoccedSummary.html
.github/workflows/: grumpy.yml  pydoctor.yml
grumpy/: __init__.py  application.py  checks.py  commands.py  lint.py  news.py  reporter.py
grumpy/cli/: about.py  cat.py  lint.py
grumpy_checks/: checks.py  commands.py  docs.py  everything.py  lint.py  news.py  utils.py
tests/: test_lint.py  test_news.py
