[tool.poetry]
name = "grumpy"
version = "0.1.0"
description = ""
authors = ["Jamie <jamie@jumpingrivers.com>"]

[tool.poetry.dependencies]
python = "^3.7"
rich = "^10.9.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
